--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.294.0",
         "axios": "^1.6.2",
-        "js-cookie": "^3.0.5",
-        "typescript": "^5",
-        "@types/node": "^20.10.0",
-        "@types/react": "^18.2.0",
-        "@types/react-dom": "^18.2.0"
+        "js-cookie": "^3.0.5"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
